--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "app-root-path": "^2.1.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.11"
+    "mongoose": "^5.4.11",
+    "winston": "^3.2.1"
   }
 }
